overflow fixed

--- a/css/nav.css
+++ b/css/nav.css
@@ -54,7 +54,10 @@ li a:hover {
 }
 
 @media (max-width: 1010px) {
+
+  html,
   body {
+    position: relative;
     overflow-x: hidden;
   }
 
@@ -126,9 +129,11 @@ li a:hover {
 }
 
 @media(max-width: 400px) {
+
+  html,
   body {
+    position: relative;
     overflow-x: hidden;
-    position: fixed;
   }
 
   a.title {
